--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,8 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ZEN丸ゴシックフォントの定義 */
+@font-face {
+  font-family: 'Zen Maru Gothic';
+  src: url('/fonts/Zen_Maru_Gothic/ZenMaruGothic-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Zen Maru Gothic';
+  src: url('/fonts/Zen_Maru_Gothic/ZenMaruGothic-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Zen Maru Gothic';
+  src: url('/fonts/Zen_Maru_Gothic/ZenMaruGothic-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Zen Maru Gothic';
+  src: url('/fonts/Zen_Maru_Gothic/ZenMaruGothic-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Zen Maru Gothic';
+  src: url('/fonts/Zen_Maru_Gothic/ZenMaruGothic-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 @layer base {
   html {
     overflow-y: scroll; /* スクロールバーを常に表示 */
+    font-family: 'Zen Maru Gothic', sans-serif;
   }
 }
